src/BadScript.Tests/tests/passing/operators/block/for/defaultExplicit_02.bs
v = 0
for i = 0 while i < 10 step 1
{
	v = i
}
return v == 9