src/BadScript.Tests/tests/failing/invalid-syntax/invalidFor_03.bs
for i = 0 while% 10
{
	
}